// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> when centered matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium y-spinner__isCentered"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <TextWrapper
    className="y-spinner--label"
    color="primary"
    size="mediumSub"
  >
    Loading
  </TextWrapper>
</div>
`;

exports[`<Spinner /> with a size matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-xSmall"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={0}
  />
  <TextWrapper
    className="y-spinner--label"
    color="primary"
    size="small"
  >
    Loading
  </TextWrapper>
</div>
`;

exports[`<Spinner /> with additional className matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium TEST_CLASSNAME"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <TextWrapper
    className="y-spinner--label"
    color="primary"
    size="mediumSub"
  >
    Loading
  </TextWrapper>
</div>
`;

exports[`<Spinner /> with dark color matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-dark y-spinner__size-medium"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <TextWrapper
    className="y-spinner--label"
    color="white"
    size="mediumSub"
  >
    Loading
  </TextWrapper>
</div>
`;

exports[`<Spinner /> with invisible text matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <ScreenreaderText>
    Loading
  </ScreenreaderText>
</div>
`;

exports[`<Spinner /> with metadata color matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-metadata y-spinner__size-medium"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <TextWrapper
    className="y-spinner--label"
    color="metadata"
    size="mediumSub"
  >
    Loading
  </TextWrapper>
</div>
`;

exports[`<Spinner /> with visible text matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium"
>
  <StyledCustomizedSpinner
    className="y-spinner--circle"
    size={2}
  />
  <TextWrapper
    className="y-spinner--label"
    color="primary"
    size="mediumSub"
  >
    Loading
  </TextWrapper>
</div>
`;
